# hypatorch

./: .gitignore  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: train.py
examples/conf/: config.yaml
examples/conf/dataset/: mnist.yaml
examples/conf/device/: cpu.yaml  gpu.yaml  mps.yaml
examples/conf/experiment/: mnist.yaml  mnist_lenet.yaml  mnist_linear.yaml
examples/conf/logger/: console.yaml
examples/conf/model/: lenet.yaml  linear.yaml
examples/conf/profiler/: advanced.yaml  passthrough.yaml  simple.yaml
examples/conf/submodules/image_encoder/: lenet.yaml  linear.yaml
examples/conf/submodules/resize/: bilinear.yaml
examples/modules/: image_encoder.py  upsample.py
hypatorch/: __init__.py  assessments.py  core.py  dataset.py  distributed.py  logger.py  losses.py  train.py  utils.py
test/: shared.py  test_checkpoint.py  test_compute_grad.py  test_distributed.py  test_logger.py  test_multi_gpu.py  test_optimizer.py  test_output_variable_names.py  test_signal_handlers.py  test_train_mode.py  test_train_resume.py
