[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "hypatorch"
dynamic = ["version"]
description = "HypaTorch: A library for abstract and visual model configuration"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Altavo GmbH" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.6",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
mlflow = [
  "mlflow",
]

[dependency-groups]
build = [
  "twine",
]
test = [
  "pytest",
  "pytest-cov",
]
example = [
  "torchvision",
  "mlflow",
]

[project.urls]
Homepage = "https://github.com/Altavo/hypatorch/"

[tool.setuptools.dynamic]
version = { attr = "hypatorch.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["hypatorch*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
