[build-system]
requires = [
  "setuptools>=68",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "hypatorch"
dynamic = ["version"]
description = "HypaTorch: A library for abstract and visual model configuration"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Altavo GmbH" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.6",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
mlflow = [
  "mlflow",
]
wandb = [
  "wandb",
]

[dependency-groups]
build = [
  "twine",
]
test = [
  "pytest",
  "pytest-cov",
]
example = [
  "torchvision",
  "mlflow",
  "wandb",
]

[project.urls]
Homepage = "https://github.com/Altavo/hypatorch/"

# Version is derived from git tags (vX.Y.Z) by setuptools-scm and written to
# hypatorch/_version.py at build time. To release a new version, just create a
# GitHub Release on a new tag -- no manual edits needed here or in __init__.py.
[tool.setuptools_scm]
version_file = "hypatorch/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypatorch*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
